# opnsense-openapi

./: .envrc  .envrc.local.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GENERATED_CLIENT_USAGE.md  LICENSE  README.md  justfile  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.md  lsp-setup.md
.config/pyproject_template/: settings.toml  sync-exclude.toml
.gemini/: settings.json
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: breaking-change-detection.yml  ci.yml  dependabot-automerge.yml  generate-matrix.yml  release.yaml  release.yml  testpypi.yml
dev/bench/: data.js
docs/: ARCHITECTURE.md  GENERATED_CLIENT_USAGE.md  HEURISTICS.md  PUBLISHING.md  TABLE_OF_CONTENTS.md  index.md
docs/decisions/: 0001-spec-matching-floor-over-highest-module-path-keyed-by-resolved-spec-version.md  9002-use-doit-for-task-automation.md  9014-use-click-for-application-cli.md  README.md
docs/deployment/: development.md  production.md  publishing.md
docs/development/: AI_SETUP.md  architecture.md  ci-cd-testing.md  doit-tasks-reference.md  extensions.md  heuristics.md  spec-version-resolution.md  tooling-roles.md
docs/development/ai/: architectural-conventions.md  first-5-minutes.md  slash-commands.md
docs/examples/: README.md  add-a-feature.md
docs/getting-started/: installation.md
docs/reference/: api.md
docs/usage/: basics.md  cli.md  generated-client.md
examples/: basic_usage.py  diagnose_api.py  openapi_example.py  swagger_ui_server.py
src/opnsense_api/: __init__.py  cli.py  openapi.py  utils.py  validator.py
src/opnsense_api/client/: __init__.py  base.py  generated_api.py
src/opnsense_api/downloader/: __init__.py  source_downloader.py
src/opnsense_api/generator/: __init__.py  code_generator.py  openapi_generator.py
src/opnsense_api/parser/: __init__.py  controller_parser.py  model_parser.py  response_analyzer.py
src/opnsense_api/specs/: opnsense-24.1.1.json  opnsense-24.1.10.json  opnsense-24.1.2.json  opnsense-24.1.3.json  opnsense-24.1.4.json  opnsense-24.1.5.json  opnsense-24.1.6.json  opnsense-24.1.7.json  opnsense-24.1.8.json  opnsense-24.1.9.json  opnsense-24.1.json  opnsense-24.7.1.json  opnsense-24.7.10.json  opnsense-24.7.11.json  opnsense-24.7.12.json  opnsense-24.7.2.json  opnsense-24.7.3.json  opnsense-24.7.4.json  opnsense-24.7.5.json  opnsense-24.7.6.json  opnsense-24.7.7.json  opnsense-24.7.8.json  opnsense-24.7.9.json  opnsense-24.7.json  opnsense-25.1.1.json  opnsense-25.1.10.json  opnsense-25.1.11.json  opnsense-25.1.12.json  opnsense-25.1.2.json  opnsense-25.1.3.json  opnsense-25.1.4.json  opnsense-25.1.5.json  opnsense-25.1.6.json  opnsense-25.1.7.json  opnsense-25.1.8.json  opnsense-25.1.9.json  opnsense-25.1.json  opnsense-25.7.1.json  opnsense-25.7.2.json  opnsense-25.7.3.json  (+8 more)
src/opnsense_openapi/: __init__.py  cli.py  logging.py  openapi.py  specs.py  utils.py  validator.py
src/opnsense_openapi/client/: __init__.py  base.py  generated_api.py
src/opnsense_openapi/downloader/: source_downloader.py
src/opnsense_openapi/generator/: __init__.py  openapi_generator.py
src/opnsense_openapi/parser/: controller_parser.py
src/opnsense_openapi/specs/: opnsense-24.1.1.json  opnsense-24.1.10.json  opnsense-24.1.2.json  opnsense-24.1.3.json  opnsense-24.1.4.json  opnsense-24.1.5.json  opnsense-24.1.6.json  opnsense-24.1.7.json  opnsense-24.1.8.json  opnsense-24.1.9.json  opnsense-24.1.json  opnsense-24.7.1.json  opnsense-24.7.10.json  opnsense-24.7.11.json  opnsense-24.7.12.json  opnsense-24.7.2.json  opnsense-24.7.3.json  opnsense-24.7.4.json  opnsense-24.7.5.json  opnsense-24.7.6.json  opnsense-24.7.7.json  opnsense-24.7.8.json  opnsense-24.7.9.json  opnsense-24.7.json  opnsense-25.1.1.json  opnsense-25.1.10.json  opnsense-25.1.11.json  opnsense-25.1.12.json  opnsense-25.1.2.json  opnsense-25.1.3.json  opnsense-25.1.4.json  opnsense-25.1.5.json  opnsense-25.1.6.json  opnsense-25.1.7.json  opnsense-25.1.8.json  opnsense-25.1.9.json  opnsense-25.1.json  opnsense-25.7.1.json  opnsense-25.7.10.json  opnsense-25.7.11.json  (+16 more)
tests/: __init__.py  conftest.py  test_cli_comprehensive.py  test_cli_download.py  test_cli_serve_docs.py  test_client.py  test_client_auto_generate.py  test_client_base.py  test_generated_api.py  test_generator.py  test_live_opnsense.py  test_logging.py  test_model_parser.py  test_openapi.py  test_openapi_generator.py  test_openapi_generator_advanced.py  test_parser.py  test_response_analyzer.py  test_source_downloader.py  test_spec_path_routing.py  test_specs.py  test_utils.py  test_validator.py
tests/benchmarks/: test_bench_generator.py  test_bench_parser.py
tests/template/: test_properties.py
tools/: regenerate_all_specs.sh
tools/doit/: install.py  project.py  release.py  testing.py
