[project]
name = "opnsense-openapi"
version = "0.1.0"
description = "OpenAPI-based Python client for OPNsense with bundled specs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.9.0",
    "jsonschema>=4.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-jsonschema>=4.21.0",
    "pygments>=2.17,<2.19",
    "build>=1.0.0",
    "twine>=5.0.0",
]
ui = [
    "flask>=3.1.0",
    "flask-swagger-ui>=5.21.0",
]

[project.scripts]
opnsense-openapi = "opnsense_api.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opnsense_api"]
include = ["src/opnsense_api/specs/*.json"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/opnsense_api --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
