[project]
name = "opnsense-openapi"
version = "0.1.0"
description = "OpenAPI-based Python client for OPNsense with bundled specs"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.9.0",
    "jsonschema>=4.21.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Internet",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/endavis/opnsense-openapi"
Repository = "https://github.com/endavis/opnsense-openapi"
"Issue Tracker" = "https://github.com/endavis/opnsense-openapi/issues"
Documentation = "https://github.com/endavis/opnsense-openapi#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "pre-commit>=3.5.0",
    "mypy>=1.8.0",
    "types-jsonschema>=4.21.0",
    "pygments>=2.17,<2.19",
    "build>=1.0.0",
    "twine>=5.0.0",
]
ui = [
    "flask>=3.1.0",
    "flask-swagger-ui>=5.21.0",
]

[project.scripts]
opnsense-openapi = "opnsense_openapi.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opnsense_openapi"]
include = ["src/opnsense_openapi/specs/*.json"]



[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/opnsense_openapi --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "src/opnsense_openapi/generated/"
]
