[build-system]
requires = ["hatchling>=1.29.0", "hatch-vcs>=0.5.0"]
build-backend = "hatchling.build"

[project]
name = "opnsense-openapi"
description = "OpenAPI-based Python client for OPNsense with bundled specs"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
dynamic = ["version"]
authors = [
    {name = "Eric Davis", email = "endavis@gmail.com"},
]
license = {file = "LICENSE"}
keywords = ["opnsense", "openapi", "api-client", "firewall", "code-generator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Internet",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.9.0",
    "jsonschema>=4.21.0",
]

[project.optional-dependencies]
dev = [
    "doit>=0.36.0",
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "pytest-benchmark>=4.0",
    "ruff>=0.15.10",
    "mypy>=1.20.1",
    "pre-commit>=3.7.0",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=1.0.3",
    "pymdown-extensions>=10.21.2",
    "codespell>=2.2",
    "pyproject-fmt>=2.0",
    "commitizen>=4.13.10",
    "pyright>=1.1.0",
    "pyyaml>=6.0",
    "types-pyyaml>=6.0.12.20260408",
    "types-jsonschema>=4.21.0",
    "vulture>=2.11",
    "radon>=6.0",
    "mutmut>=3.0",
    "hypothesis>=6.151.13",
    "build>=1.0.0",
    "twine>=5.0.0",
    "pygments>=2.20",
]
security = [
    "pip-audit>=2.6",
    "bandit>=1.7",
    "pip>=26.0",
    "pip-licenses>=4.0",
    "cyclonedx-bom>=4.0",
]
ui = [
    "flask>=3.1.0",
    "flask-swagger-ui>=5.21.0",
]

[project.urls]
Homepage = "https://github.com/endavis/opnsense-openapi"
Repository = "https://github.com/endavis/opnsense-openapi"
Documentation = "https://github.com/endavis/opnsense-openapi/tree/main/docs"
Issues = "https://github.com/endavis/opnsense-openapi/issues"

[project.scripts]
opnsense-openapi = "opnsense_openapi.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/opnsense_openapi"]
include = ["src/opnsense_openapi/specs/*.json"]

[tool.hatch.version]
source = "vcs"
tag-pattern = "^(?:v|d)(?P<version>.+)$"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/opnsense_openapi/_version.py"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "**/_version.py",
    "src/opnsense_openapi/generated",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations (type hints)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "RUF",  # Ruff-specific rules
    "SIM",  # flake8-simplify
    "ASYNC", # flake8-async
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tools/pyproject_template/*.py" = [
    "ANN401",
    "RUF022",
]
"tests/**/*.py" = [
    "ANN001",
    "ANN201",
    "ANN202",
    "ANN401",
]
"src/opnsense_openapi/cli.py" = [
    "ANN401",
    "B904",
    "SIM108",
]
"src/opnsense_openapi/client/*.py" = [
    "ANN401",
]
"src/opnsense_openapi/openapi.py" = [
    "ANN401",
]
"src/opnsense_openapi/parser/*.py" = [
    "ANN401",
]
"src/opnsense_openapi/generator/*.py" = [
    "ANN401",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
exclude = [
    "src/opnsense_openapi/generated/",
    "tools/pyproject_template/",
    ".claude/",
    ".gemini/",
    ".codex/",
]

[[tool.mypy.overrides]]
module = "doit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["flask.*", "flask_swagger_ui.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tools.pyproject_template.*"
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--strict-config --strict-markers --benchmark-disable"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "benchmark: marks tests as performance benchmarks (deselect with '--benchmark-disable')",
    "property: marks tests as property-based tests (run with Hypothesis)",
]

[tool.pytest-benchmark]
disable_gc = true
min_rounds = 5
warmup = true

[tool.coverage.run]
branch = true
source = ["opnsense_openapi"]

[tool.coverage.report]
skip_covered = false
show_missing = true
precision = 2
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
omit = [
    "src/opnsense_openapi/generated/*",
    "src/opnsense_openapi/_version.py",
]

[tool.coverage.html]
directory = "tmp/htmlcov"

[tool.coverage.xml]
output = "tmp/coverage.xml"

[tool.bandit]
exclude_dirs = [
    "tests",
    "tmp",
    ".venv",
    "docs",
    "examples",
    ".git",
    ".github",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "site",
    ".claude",
    ".gemini",
    ".codex",
    ".devcontainer",
    ".vscode",
    "src/opnsense_openapi/generated",
]
skips = [
    "B101",
    "B603",
    "B607",
]

[tool.codespell]
skip = "tmp,.venv,.git,*.lock,*.pyc,__pycache__,src/opnsense_openapi/generated,src/opnsense_openapi/specs"
ignore-words-list = "crate"

[tool.vulture]
min_confidence = 80
paths = ["src", "tests"]
exclude = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/generated/*",
]
ignore_names = [
    "test_*",
    "fixture_*",
    "*_fixture",
    "setUp",
    "tearDown",
    "setUpClass",
    "tearDownClass",
]
ignore_decorators = [
    "@pytest.fixture",
    "@pytest.mark.*",
    "@click.command",
    "@click.option",
    "@click.group",
    "@abstractmethod",
]

[tool.mutmut]
paths_to_mutate = ["src/"]
tests_dir = ["tests/"]
runner = "uv run python -m pytest -x --assert=plain"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
tag_format = "v$version"
version_provider = "scm"
update_changelog_on_bump = true
major_version_zero = true
merge_prerelease = true
bump_pattern = "^(feat|fix|refactor|perf)"
bump_map = {"feat" = "MINOR", "fix" = "PATCH", "refactor" = "PATCH", "perf" = "PATCH"}
change_type_order = ["BREAKING CHANGE", "feat", "fix", "refactor", "perf"]

[tool.pyright]
include = [
    "src",
    "tests",
    "*.py",
    "tools",
    ".github",
]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/tmp",
    "**/.pytest_cache",
    "**/.mypy_cache",
    "**/.ruff_cache",
    "**/site",
    "**/.git",
    "src/opnsense_openapi/generated",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false
